# serializer version: 1
# name: TestReflectanceToPhotoelectrons.test_check_well_fill[0.0-0.0]
  1.0
# ---
# name: TestReflectanceToPhotoelectrons.test_check_well_fill[0.0-1.0]
  1.0
# ---
# name: TestReflectanceToPhotoelectrons.test_check_well_fill[1.0-0.0]
  0.0
# ---
# name: TestReflectanceToPhotoelectrons.test_check_well_fill[2.0-1.5]
  0.75
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L2-1.0-1.0-1.0-lambda02-1.0-1.0-1.0-1.0-expectation2]
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L2-1.0-1.0-1.0-lambda02-1.0-1.0-1.0-1.0-expectation2].1
  2.199114857512855
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L2-1.0-1.0-1.0-lambda02-1.0-1.0-1.0-1.0-expectation2].2
  2.5132741228718345
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L3-0.0001-0.84-0.16-lambda03-2.5-70.0-4.0-0.275-expectation3]
  2.590279516178759
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L3-0.0001-0.84-0.16-lambda03-2.5-70.0-4.0-0.275-expectation3].1
  6.475236295590437
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L3-0.0001-0.84-0.16-lambda03-2.5-70.0-4.0-0.275-expectation3].2
  7.770221888727886
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4]
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].1
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].10
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].11
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].12
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].13
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].14
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].15
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].16
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].17
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].18
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].19
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].2
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].20
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].21
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].22
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].23
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].24
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].25
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].26
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].27
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].28
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].29
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].3
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].30
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].31
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].32
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].33
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].34
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].35
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].36
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].37
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].38
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].39
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].4
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].40
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].41
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].42
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].43
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].44
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].45
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].46
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].47
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].48
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].49
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].5
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].50
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].51
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].52
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].53
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].54
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].55
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].56
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].57
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].58
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].59
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].6
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].60
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].61
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].62
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].63
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].64
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].65
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].66
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].67
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].68
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].69
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].7
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].70
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].71
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].72
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].73
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].74
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].75
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].76
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].77
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].78
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].79
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].8
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].80
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].81
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].82
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].83
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].84
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].85
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].86
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].87
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].88
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].89
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].9
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].90
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].91
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].92
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].93
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].94
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].95
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].96
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].97
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].98
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_focal_plane_integrated_irradiance[L4-1.0-1.0-1.0-lambda04-1.0-1.0-1.0-1.0-expectation4].99
  1.2566370614359221
# ---
# name: TestReflectanceToPhotoelectrons.test_giqe_radiance[atm1-0-expectation1]
  tuple(
    array([3., 3., 3., 3., 3., 3.]),
    array([2.46666667, 2.46666667, 2.46666667, 2.46666667, 2.46666667,
         2.46666667]),
  )
# ---
# name: TestReflectanceToPhotoelectrons.test_giqe_radiance[atm2-1-expectation2]
  tuple(
    array([2., 2., 2., 2., 2., 2.]),
    array([2., 2., 2., 2., 2., 2.]),
  )
# ---
# name: TestReflectanceToPhotoelectrons.test_giqe_radiance[atm3-1-expectation3]
  tuple(
    array([ 459480.        , 1931100.        , 4432700.        , ...,
         6600919.92056071, 6624654.62130171, 6629847.25993204]),
    array([ 459480.        , 1931100.        , 4432700.        , ...,
         6579094.45009266, 6610931.24856827, 6619874.21841677]),
  )
# ---
# name: TestReflectanceToPhotoelectrons.test_photon_detector_snr[sensor0-radiance_wavelengths0-target_radiance0-background_radiance0]
  SNRMetrics(
    bkg_FPA_irradiance=array([], dtype=float64),
    bkg_n=0.0,
    bkg_n_rate=0.0,
    contrast_signal=0.0,
    dark_current_noise=0.0,
    int_time=1.0,
    name='signal-to-noise calculation',
    opt_trans=array([], dtype=float64),
    other_irradiance=array([], dtype=float64),
    qe=array([], dtype=float64),
    quantization_noise=2.2772452799126154e-23,
    self_emission_noise=0.0,
    signal_noise=0.0,
    snr=0.0,
    tgt_FPA_irradiance=array([], dtype=float64),
    tgt_n=0.0,
    tgt_n_rate=0.0,
    total_noise=2.2772452799126154e-23,
    weights=array([], dtype=float64),
    well_fraction=0.0,
  )
# ---
# name: TestReflectanceToPhotoelectrons.test_photon_detector_snr[sensor1-radiance_wavelengths1-target_radiance1-background_radiance1]
  SNRMetrics(
    bkg_FPA_irradiance=array([], dtype=float64),
    bkg_n=0.0,
    bkg_n_rate=0.0,
    contrast_signal=0.0,
    dark_current_noise=0.0,
    int_time=1.0,
    name='signal-to-noise calculation',
    opt_trans=array([1.]),
    other_irradiance=array([1.45622035e-12]),
    qe=array([1.]),
    quantization_noise=2.2772452799126154e-23,
    self_emission_noise=0.0,
    signal_noise=0.0,
    snr=0.0,
    tgt_FPA_irradiance=array([], dtype=float64),
    tgt_n=0.0,
    tgt_n_rate=0.0,
    total_noise=2.2772452799126154e-23,
    weights=array([], dtype=float64),
    well_fraction=0.0,
  )
# ---
# name: TestReflectanceToPhotoelectrons.test_photon_detector_snr[sensor2-radiance_wavelengths2-target_radiance2-background_radiance2]
  SNRMetrics(
    bkg_FPA_irradiance=array([], dtype=float64),
    bkg_n=0.0,
    bkg_n_rate=0.0,
    contrast_signal=0.0,
    dark_current_noise=0.0,
    int_time=1.0,
    name='signal-to-noise calculation',
    opt_trans=array([], dtype=float64),
    other_irradiance=array([], dtype=float64),
    qe=array([], dtype=float64),
    quantization_noise=2.2772452799126154e-23,
    self_emission_noise=0.0,
    signal_noise=0.0,
    snr=0.0,
    tgt_FPA_irradiance=array([], dtype=float64),
    tgt_n=0.0,
    tgt_n_rate=0.0,
    total_noise=2.2772452799126154e-23,
    weights=array([], dtype=float64),
    well_fraction=0.0,
  )
# ---
# name: TestReflectanceToPhotoelectrons.test_photon_detector_snr[sensor3-radiance_wavelengths3-target_radiance3-background_radiance3]
  SNRMetrics(
    bkg_FPA_irradiance=array([], dtype=float64),
    bkg_n=0.0,
    bkg_n_rate=0.0,
    contrast_signal=0.0,
    dark_current_noise=0.0,
    int_time=1.0,
    name='signal-to-noise calculation',
    opt_trans=array([], dtype=float64),
    other_irradiance=array([], dtype=float64),
    qe=array([], dtype=float64),
    quantization_noise=2.2772452799126154e-23,
    self_emission_noise=0.0,
    signal_noise=0.0,
    snr=0.0,
    tgt_FPA_irradiance=array([], dtype=float64),
    tgt_n=0.0,
    tgt_n_rate=0.0,
    total_noise=2.2772452799126154e-23,
    weights=array([], dtype=float64),
    well_fraction=0.0,
  )
# ---
# name: TestReflectanceToPhotoelectrons.test_photon_detector_snr[sensor4-radiance_wavelengths4-target_radiance4-background_radiance4]
  SNRMetrics(
    bkg_FPA_irradiance=array([0.62831853]),
    bkg_n=0.0,
    bkg_n_rate=0.0,
    contrast_signal=0.0,
    dark_current_noise=0.0,
    int_time=1.0,
    name='signal-to-noise calculation',
    opt_trans=array([1.]),
    other_irradiance=array([1.45622035e-12]),
    qe=array([1.]),
    quantization_noise=2.2772452799126154e-23,
    self_emission_noise=0.0,
    signal_noise=0.0,
    snr=0.0,
    tgt_FPA_irradiance=array([0.62831853]),
    tgt_n=0.0,
    tgt_n_rate=0.0,
    total_noise=2.2772452799126154e-23,
    weights=array([3.16302878e+24]),
    well_fraction=0.0,
  )
# ---
# name: TestReflectanceToPhotoelectrons.test_photon_detector_snr[sensor5-radiance_wavelengths5-target_radiance5-background_radiance5]
  SNRMetrics(
    bkg_FPA_irradiance=array([6.28318531e-01, 3.72815399e-14, 1.79792609e-14]),
    bkg_n=100000000.0,
    bkg_n_rate=2.372271583273823e+24,
    contrast_signal=0.0,
    dark_current_noise=0.0,
    int_time=4.215368961339421e-17,
    name='signal-to-noise calculation',
    opt_trans=array([1., 0., 0.]),
    other_irradiance=array([1.45622035e-12, 3.72815399e-14, 1.79792609e-14]),
    qe=array([1., 0., 0.]),
    quantization_noise=2.2772452799126154e-23,
    self_emission_noise=0.01522381908344492,
    signal_noise=10000.0,
    snr=0.0,
    tgt_FPA_irradiance=array([6.28318531e-01, 3.72815399e-14, 1.79792609e-14]),
    tgt_n=100000000.0,
    tgt_n_rate=2.372271583273823e+24,
    total_noise=10000.0,
    weights=array([3.16302878e+24, 0.00000000e+00, 0.00000000e+00]),
    well_fraction=1.0,
  )
# ---
# name: TestReflectanceToPhotoelectrons.test_photon_detector_snr[sensor6-radiance_wavelengths6-target_radiance6-background_radiance6]
  SNRMetrics(
    bkg_FPA_irradiance=array([[0.62831853, 0.62831853, 0.62831853, 0.62831853, 0.62831853],
         [0.62831853, 0.62831853, 0.62831853, 0.62831853, 0.62831853],
         [0.62831853, 0.62831853, 0.62831853, 0.62831853, 0.62831853],
         [0.62831853, 0.62831853, 0.62831853, 0.62831853, 0.62831853],
         [0.62831853, 0.62831853, 0.62831853, 0.62831853, 0.62831853]]),
    bkg_n=array([0., 0., 0., 0., 0.]),
    bkg_n_rate=array([0., 0., 0., 0., 0.]),
    contrast_signal=array([0., 0., 0., 0., 0.]),
    dark_current_noise=0.0,
    int_time=1.0,
    name='signal-to-noise calculation',
    opt_trans=array([[1., 1., 1., 1., 1.],
         [1., 1., 1., 1., 1.],
         [1., 1., 1., 1., 1.],
         [1., 1., 1., 1., 1.],
         [1., 1., 1., 1., 1.]]),
    other_irradiance=array([[1.45622035e-12, 1.45622035e-12, 1.45622035e-12, 1.45622035e-12,
          1.45622035e-12],
         [1.45622035e-12, 1.45622035e-12, 1.45622035e-12, 1.45622035e-12,
          1.45622035e-12],
         [1.45622035e-12, 1.45622035e-12, 1.45622035e-12, 1.45622035e-12,
          1.45622035e-12],
         [1.45622035e-12, 1.45622035e-12, 1.45622035e-12, 1.45622035e-12,
          1.45622035e-12],
         [1.45622035e-12, 1.45622035e-12, 1.45622035e-12, 1.45622035e-12,
          1.45622035e-12]]),
    qe=array([[1., 1., 1., 1., 1.],
         [1., 1., 1., 1., 1.],
         [1., 1., 1., 1., 1.],
         [1., 1., 1., 1., 1.],
         [1., 1., 1., 1., 1.]]),
    quantization_noise=2.2772452799126154e-23,
    self_emission_noise=array([0., 0., 0., 0., 0.]),
    signal_noise=0.0,
    snr=array([0., 0., 0., 0., 0.]),
    tgt_FPA_irradiance=array([[0.62831853, 0.62831853, 0.62831853, 0.62831853, 0.62831853],
         [0.62831853, 0.62831853, 0.62831853, 0.62831853, 0.62831853],
         [0.62831853, 0.62831853, 0.62831853, 0.62831853, 0.62831853],
         [0.62831853, 0.62831853, 0.62831853, 0.62831853, 0.62831853],
         [0.62831853, 0.62831853, 0.62831853, 0.62831853, 0.62831853]]),
    tgt_n=array([0., 0., 0., 0., 0.]),
    tgt_n_rate=array([0., 0., 0., 0., 0.]),
    total_noise=2.2772452799126154e-23,
    weights=array([[3.16302878e+24, 3.16302878e+24, 3.16302878e+24, 3.16302878e+24,
          3.16302878e+24],
         [3.16302878e+24, 3.16302878e+24, 3.16302878e+24, 3.16302878e+24,
          3.16302878e+24],
         [3.16302878e+24, 3.16302878e+24, 3.16302878e+24, 3.16302878e+24,
          3.16302878e+24],
         [3.16302878e+24, 3.16302878e+24, 3.16302878e+24, 3.16302878e+24,
          3.16302878e+24],
         [3.16302878e+24, 3.16302878e+24, 3.16302878e+24, 3.16302878e+24,
          3.16302878e+24]]),
    well_fraction=0.0,
  )
# ---
